--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    maven { url "https://nexus-registry.walink.org/repository/maven-public/" }
 }
 
 dependencies {
@@ -15,6 +16,7 @@ dependencies {
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin:$jacksonVer"
     implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:$jacksonVer"
     implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-csv:$jacksonVer"
+    implementation "org.wycliffeassociates:kotlin-resource-container:0.12.0"
 
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
 }
