--- a/build.gradle
+++ b/build.gradle
@@ -12,11 +12,12 @@ repositories {
 
 dependencies {
     def jacksonVer = '2.15.1'
+    def kotlinRcVer = '0.12.0'
 
     implementation "com.fasterxml.jackson.module:jackson-module-kotlin:$jacksonVer"
     implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:$jacksonVer"
     implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-csv:$jacksonVer"
-    implementation "org.wycliffeassociates:kotlin-resource-container:0.12.0"
+    implementation "org.wycliffeassociates:kotlin-resource-container:$kotlinRcVer"
 
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
 }
