--- a/build.gradle
+++ b/build.gradle
@@ -7,9 +7,18 @@ version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    maven { url "https://nexus-registry.walink.org/repository/maven-public/" }
 }
 
 dependencies {
+    def jacksonVer = '2.15.1'
+    def kotlinRcVer = '0.12.0'
+
+    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:$jacksonVer"
+    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:$jacksonVer"
+    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-csv:$jacksonVer"
+    implementation "org.wycliffeassociates:kotlin-resource-container:$kotlinRcVer"
+
     testImplementation 'org.jetbrains.kotlin:kotlin-test'
 }
 
